@@ -100,6 +100,7 @@
     <Compile Include="BasicElements\BasicWindow.cs" />
     <Compile Include="BasicElements\BasicWindowBase.cs" />
     <Compile Include="By.cs" />
+    <Compile Include="CodedUIEnvironment.cs" />
     <Compile Include="CombinableAnd.cs" />
     <Compile Include="CombinableBy.cs" />
     <Compile Include="CombinableDo.cs" />
@@ -107,7 +108,7 @@
     <Compile Include="CombinableWith.cs" />
     <Compile Include="CompareKind.cs" />
     <Compile Include="Do.cs" />
-    <Compile Include="ElementsContainer.cs" />
+    <Compile Include="Utilities\DynamicSleep.cs" />
     <Compile Include="ExecutableNotAvailableException.cs" />
     <Compile Include="From.cs" />
     <Compile Include="Internal\License.xaml.cs">
@@ -122,6 +123,7 @@
     <Compile Include="MouseEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\CommonMeta.cs" />
+    <Compile Include="Utilities\Time.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="UIElementNotFoundException.cs" />
     <Compile Include="Use.cs" />
